--- a/server/frontend/src/components/Register/Register.css
+++ b/server/frontend/src/components/Register/Register.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   margin: auto;
-  margin-top: 2%;
-  background-color: darkturquoise;
+  margin-top: 1%;
+  background-color: #606060;
   min-width: 350px;
   width: 30%;
 }
@@ -57,7 +57,7 @@
 .img_icon{
   width:40px;
   margin:.1cm;
-  background-color:#0C9;
+  background-color:#606060;
   color:#FFF;
   border-radius:50px;
   text-align:center;
